UserStatus 추가